Fix alignment and styles of Size & Quantity

--- a/products/static/css/products.css
+++ b/products/static/css/products.css
@@ -74,8 +74,7 @@
 
 .card-description {
     padding: 0.75rem 0.5rem;
-    line-height: 2;
-    font-size: 1.2rem;
+    line-height: 1.5rem;
 }
 
 .card-footer {
@@ -104,7 +103,34 @@
     color: #674ea7;
 }
 
-/* Product Form */
+.size-qty-input-form {
+    margin-left: 0.35rem;
+}
+
+.form-control {
+    border-radius: 0;
+}
+
+.input-group>.input-group-append>.btn {
+    background-color: #674ea7;
+    color: #fff;
+    border-radius: 0;
+    border: 1px solid #ced4da;
+}
+
+.input-group>.input-group-prepend>.btn {
+    background-color: #e9ecef;
+    color: #383838;
+    border-radius: 0;
+    border: 1px solid #ced4da;
+}
+
+.input-group>.form-control {
+    text-align: center;
+}
+
+
+/* || PRODUCT FORM STYLES  */
 .btn-file {
     position: relative;
     overflow: hidden;
